<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        style="@style/colortitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/order_number_1245783"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"></TextView>

    <Button
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_special"
        android:text="@string/special_request"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="20dp">

    </Button>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardOne"
        android:layout_width="400dp"
        android:layout_height="350dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle">
        <TextView
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:text="@string/_105_2000_ks"
            style="@style/color_red"
            android:textSize="20sp"
            android:layout_marginStart="20dp"></TextView>

        <view
            android:layout_width="1dp"
            android:layout_height="180dp"
            android:layout_marginLeft="200dp"
            android:background="@color/colorView"
            android:layout_marginStart="200dp"></view>

        <view
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:layout_marginTop="70dp"
            android:background="@color/colorView"></view>

        <view
            android:layout_width="400dp"
            android:layout_height="1dp"
            android:layout_marginTop="180dp"
            android:background="@color/colorView"></view>

        <view
            android:layout_width="400dp"
            android:layout_height="1dp"
            android:layout_marginTop="310dp"
            android:background="@color/colorView"></view>
        <TextView
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="220dp"
            android:text="@string/delivery_details"
            style="@style/colorLast"
            android:textSize="20sp"
            android:layout_marginStart="220dp"></TextView>
        <Button
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:text="@string/delivered"
            android:background="@drawable/btn_delivered"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="85dp"
            android:textSize="12sp"
            android:layout_marginStart="20dp"></Button>
        <Button
            android:layout_width="85dp"
            android:layout_height="20dp"
            android:text="@string/grandma_home"
            android:background="@drawable/btn_grandma"
            android:layout_marginLeft="220dp"
            android:textSize="12sp"
            android:layout_marginTop="65dp"
            android:layout_marginStart="220dp"></Button>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_date_19_9_1999"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="120dp"
            android:layout_marginStart="20dp"></TextView>
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/russia_s_petersburg_196048ru"
            android:layout_marginLeft="220dp"
            android:layout_marginStart="220dp"></TextView>
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="145dp"
            android:text="@string/milionnaya_street_29_flat_10"
            android:layout_marginLeft="220dp"
            android:layout_marginStart="220dp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_item_4"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="150dp"
            android:layout_marginStart="20dp"></TextView>
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/delievered_changes"
            android:layout_marginTop="190dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"></TextView>
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/applied_coupon_code"
            android:layout_marginTop="230dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"></TextView>
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/discount"
            android:layout_marginTop="270dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"></TextView>
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"
            android:layout_marginTop="320dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_Column"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="190dp"
            style="@style/color_red"
            android:layout_marginStart="200dp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_Column"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="230dp"
            style="@style/color_red"
            android:layout_marginStart="200dp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_Column"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="270dp"
            style="@style/color_red"
            android:layout_marginStart="200dp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_Column"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="320dp"
            style="@style/color_red"
            android:layout_marginStart="200dp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2500_ks"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="190dp"
            style="@style/color_red"
            android:layout_marginStart="220dp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fg_22365893"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="230dp"
            style="@style/color_red"
            android:layout_marginStart="220dp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20_20410_ks"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="270dp"
            style="@style/color_red"
            android:layout_marginStart="220dp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_transfer"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="320dp"
            style="@style/color_red"
            android:layout_marginStart="220dp"></TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTwo"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardOne">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:src="@drawable/iphone"
            android:contentDescription="@string/todo"></ImageView>

        <TextView
            style="@style/colorLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="8dp"
            android:text="@string/iphone_8_plus"
            android:textSize="15sp"
            android:layout_marginStart="130dp"></TextView>


        <TextView
            style="@style/colorLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="60dp"
            android:text="@string/gold"
            android:textSize="12sp"
            android:layout_marginStart="130dp">

        </TextView>

        <TextView
            style="@style/colorLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="75dp"
            android:text="@string/qty"
            android:textSize="12sp"
            android:layout_marginStart="130dp"></TextView>

        <TextView
            style="@style/color_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="8dp"
            android:text="@string/_980000_ks"
            android:layout_marginStart="300dp">

        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardThree"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardTwo">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:src="@drawable/blender"
            android:contentDescription="@string/todo"></ImageView>

        <TextView
            style="@style/colorLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="8dp"
            android:text="@string/blender_n41015"
            android:textSize="15sp"
            android:layout_marginStart="130dp"></TextView>

        <TextView
            style="@style/colorLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="60dp"
            android:text="@string/panasonic"
            android:textSize="12sp"
            android:layout_marginStart="130dp">

        </TextView>

        <TextView
            style="@style/colorLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="75dp"
            android:text="@string/qty"
            android:textSize="12sp"
            android:layout_marginStart="130dp"></TextView>

        <TextView
            style="@style/color_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="8dp"
            android:text="@string/_999999_ks"
            android:layout_marginStart="300dp">

        </TextView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardFour"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        app:cardBackgroundColor="#FBD0C2"
        app:cardCornerRadius="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardThree">

        <TextView
            style="@style/colorLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/bank_information"
            android:textSize="15sp">

        </TextView>

        <TextView
            style="@style/colorLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/bank_name"
            android:textSize="12sp">

        </TextView>

        <TextView
            style="@style/colorLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/account_number"
            android:textSize="12sp">

        </TextView>

        <TextView
            style="@style/colorLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/name"
            android:textSize="12sp">

        </TextView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>